--- a/css/venedorstyle.css
+++ b/css/venedorstyle.css
@@ -31,6 +31,7 @@ Single-colored icons can be modified like so:
 /* HEADER */
 .header {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    position: relative;
 }
 .top-header {
     background-color: rgb(236, 236, 236);
@@ -207,4 +208,5 @@ Single-colored icons can be modified like so:
     background-color: var(--prim);
     border-top: 1px solid rgb(46, 46, 46);
 }
+
 /* CLOSE FOOTER */
